# agentos-

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt
.github/: zap-rules.tsv
.github/workflows/: ci.yml  e2e.yml  release.yml  security-scan.yml
deploy/airgap/: README.md  bundle.sh  install.sh
deploy/compose/: loki-config.yaml  minio-init.sh  otel-collector.yaml  prometheus-alerts.yml  prometheus.yml  promtail-config.yaml
docs/: api.md  architecture.md  deployment.md  security.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_models.py  0003_documents.py  0004_tools.py  0005_agents_chat.py  0006_memory.py  0007_api_keys_agent_versions.py  0008_policy_bundles.py  0009_tool_binding.py  0010_costs.py  0011_collection_document.py  0012_audit_hash_chain.py
policies/: data_access.rego  model_access.rego  tool_access.rego
scripts/: bootstrap.sh  demo.py  openapi_snapshot.py  pull_models.sh  seed.py  smoke.sh
sdk/python/agenticos/: pyproject.toml
sdk/python/agenticos/src/agenticos/: __init__.py  client.py  errors.py  models.py
sdk/python/agenticos/tests/: test_client.py  test_client_toplevel.py
services/: Dockerfile
services/agent_runtime/: pyproject.toml
services/agent_runtime/src/agent_runtime/: __init__.py  main.py  policy.py  proxies.py  routes.py  runner.py  schemas.py  settings.py  state.py
services/agent_runtime/src/agent_runtime/graphs/: __init__.py  react.py
services/agent_runtime/tests/: conftest.py  test_app.py  test_policy_check.py  test_react_graph.py  test_routes.py  test_streaming_react.py
services/api_gateway/: pyproject.toml
services/api_gateway/src/api_gateway/: __init__.py  audit_bus.py  db.py  error_handlers.py  job_queue.py  main.py  model_capabilities.py  opa_client.py  rate_limit.py  schemas.py  security_headers.py  settings.py
services/api_gateway/src/api_gateway/auth/: __init__.py  api_keys.py  deps.py  oidc.py  session.py
services/api_gateway/src/api_gateway/routes/: admin.py  admin_models.py  agents.py  api_keys.py  audit.py  auth.py  chat.py  knowledge.py  me.py  policies.py  tools.py  workspaces.py
services/api_gateway/tests/: conftest.py  test_admin_models.py  test_agent_tool_bind.py  test_agent_versions.py  test_agents_proxy.py  test_agents_toplevel.py  test_api_keys.py  test_app.py  test_audit.py  test_audit_chain.py  test_audit_from_to.py  test_collection_search.py  test_dev_login.py  test_doc_async.py  test_end_session.py  test_error_handlers.py  test_knowledge_proxy.py  test_knowledge_toplevel.py  test_me.py  test_metrics.py  test_model_capabilities.py  test_more_endpoints.py  test_more_endpoints2.py  test_oidc_flow.py  test_policies.py  test_rate_limit.py  test_rbac.py  test_security_headers.py  test_seed.py  test_session.py  test_token_refresh.py  test_tool_bindings.py  test_tools_proxy.py  test_workspaces.py  test_ws_cancel.py
services/knowledge_svc/: pyproject.toml
services/knowledge_svc/src/knowledge_svc/: __init__.py  chunker.py  embedder.py  ingestion.py  main.py  queue.py  routes.py  s3.py  schemas.py  search.py  settings.py
services/knowledge_svc/src/knowledge_svc/ingest/: __init__.py  parsers.py
services/knowledge_svc/tests/: conftest.py  test_app.py  test_async_ingest.py  test_chunk_pages.py  test_chunker.py  test_collection_document.py  test_parsers.py  test_routes.py  test_search.py
services/llm_gateway/: pyproject.toml
services/llm_gateway/src/llm_gateway/: __init__.py  main.py  quota.py  registry.py  schemas.py  settings.py  state.py
services/llm_gateway/src/llm_gateway/providers/: __init__.py  base.py  ollama.py  openai_compat.py
services/llm_gateway/src/llm_gateway/routes/: __init__.py  deps.py  models_admin.py  v1.py
services/llm_gateway/tests/: conftest.py  test_admin_models.py  test_app.py  test_costs.py  test_providers.py  test_quota.py  test_redaction.py  test_v1_chat.py
services/memory_svc/: pyproject.toml
services/memory_svc/src/memory_svc/: __init__.py  embedder.py  long_term.py  main.py  routes.py  schemas.py  settings.py  short_term.py  state.py
services/memory_svc/tests/: conftest.py  test_app.py  test_long_term.py  test_routes.py  test_short_term.py  test_verb_aliases.py
services/shared/: README.md  pyproject.toml
services/shared/src/agenticos_shared/: __init__.py  app.py  audit.py  audit_chain.py  auth.py  db.py  errors.py  healthz.py  logging.py  metrics.py  models.py  openinference.py  otel.py  redaction.py  secrets_box.py  settings.py
services/shared/tests/: test_audit.py  test_audit_chain.py  test_auth.py  test_errors.py  test_healthz.py  test_openinference.py  test_redaction.py  test_secrets_box.py  test_settings.py
services/tool_registry/: pyproject.toml
services/tool_registry/src/tool_registry/: __init__.py  http_plugin.py  invoker.py  main.py  mcp_client.py  policy.py  routes.py  schemas.py  settings.py
services/tool_registry/src/tool_registry/builtins/: __init__.py  http_get.py  rag_search.py
services/tool_registry/tests/: conftest.py  test_app.py  test_builtins.py  test_crud.py  test_egress_workspace.py  test_http_plugin.py  test_invoker.py  test_metrics.py  test_policy.py  test_secrets_at_rest.py
services/worker/: pyproject.toml
services/worker/src/worker/: __init__.py  main.py  settings.py
services/worker/src/worker/jobs/: __init__.py  ingest_document.py  ping.py  summarize_session.py
services/worker/tests/: test_ingest_document.py  test_ping.py  test_summarize_session.py
tests/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/evals/: README.md  runner.py  test_scorer.py
tests/integration/: conftest.py  test_e2e_demo.py  test_tenant_isolation.py
tests/load/: README.md  agent_run.js  healthz.js  me_smoke.js
web-ui/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
web-ui/app/: layout.tsx  page.tsx
web-ui/components/: AppShell.tsx
web-ui/lib/: api.ts  styles.ts
(+38 files in other folders)
