[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticos-agent-runtime"
version = "0.1.0"
description = "Executes agent workflow graphs (LangGraph)."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "agenticos-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
