[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticos-api-gateway"
version = "0.1.0"
description = "AgenticOS API gateway: AuthN/AuthZ, REST/WebSocket, audit, rate limit."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "agenticos-shared",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=12,<14",
    "python-multipart>=0.0.9,<1",
    "authlib>=1.3,<2",
    "itsdangerous>=2.2,<3",
    "httpx>=0.27,<1",
    "nats-py>=2.7,<3",
    "arq>=0.26,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "respx>=0.21,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
