[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticos-knowledge-svc"
version = "0.1.0"
description = "Document ingestion, embeddings, and vector search."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "agenticos-shared",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
    "pypdf>=4.3,<5",
    "beautifulsoup4>=4.12,<5",
    "tiktoken>=0.7,<1",
    "markdown-it-py>=3,<4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "respx>=0.21,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
