[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticos-worker"
version = "0.1.0"
description = "AgenticOS background worker (ingestion, embeddings, evals)."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "agenticos-shared",
    "arq>=0.26,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
