[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticos"
version = "0.1.0"
description = "Python SDK for AgenticOS."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["httpx>=0.27,<1", "pydantic>=2.8,<3"]

[tool.setuptools.packages.find]
where = ["src"]
